Gyroscope (DeviceMotion related) permission cannot be requested in WKWebView unless the client app sets a WKUIDelegate https://bugs.webkit.org/show_bug.cgi?id=203287

Reviewed by Alex Christensen.

Source/WebKit:

Device orientation / motion events permission dialog would not be shown unless the client app
set a WKUIDelegate on the WKWebView, even though we do not need this WKUIDelegate to show the
prompt.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _deviceOrientationUserPermissionHandler]):
(-[WKWebView _setDeviceOrientationUserPermissionHandler:]):
* UIProcess/API/Cocoa/WKWebViewPrivate.h:
* UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::UIClient::shouldAllowDeviceOrientationAndMotionAccess):
* UIProcess/Cocoa/WKOrientationAccessAlert.mm:
(WebKit::presentOrientationAccessAlert):

Tools:

Add layout test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/DeviceOrientation.mm:
(runDeviceOrientationTest):
(TEST):


Canonical link: https://commits.webkit.org/218286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253343 268f45cc-cd09-0410-ab3c-d52691b4dbfc