Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h
@@ -508,6 +508,8 @@ typedef NS_OPTIONS(NSUInteger, _WKRectEdge) {
 
 - (void)_triggerSystemPreviewActionOnElement:(uint64_t)elementID document:(uint64_t)documentID page:(uint64_t)pageID WK_API_AVAILABLE(ios(WK_IOS_TBA));
 
+- (void)_setDeviceOrientationUserPermissionHandlerForTesting:(BOOL (^)())handler WK_API_AVAILABLE(ios(WK_IOS_TBA));
+
 @property (nonatomic, readonly) BOOL _contentViewIsFirstResponder WK_API_AVAILABLE(ios(12.2));
 #else
 - (void)_dismissContentRelativeChildWindows WK_API_AVAILABLE(macos(10.13.4));
