Source/WebKit/UIProcess/Cocoa/WKOrientationAccessAlert.mm
@@ -29,6 +29,8 @@
 #if ENABLE(DEVICE_ORIENTATION)
 
 #import "WKWebViewInternal.h"
+#import "WKWebViewPrivate.h"
+#import "WebPageProxy.h"
 #import <WebCore/LocalizedStrings.h>
 #import <wtf/text/WTFString.h>
 
@@ -36,6 +38,9 @@ namespace WebKit {
 
 void presentOrientationAccessAlert(WKWebView *view, const String& host, CompletionHandler<void(bool)>&& completionHandler)
 {
+    if (auto& userPermissionHandler = view._page->deviceOrientationUserPermissionHandlerForTesting())
+        return completionHandler(userPermissionHandler());
+
     NSString *alertText = [NSString stringWithFormat:WEB_UI_NSSTRING(@"“%@” Would Like to Access Motion and Orientation", @"Message for requesting access to the device motion and orientation"), (NSString *)host];
     UIAlertController* alert = [UIAlertController alertControllerWithTitle:alertText message:nil preferredStyle:UIAlertControllerStyleAlert];
 
